Bug 251118 - Sorting order is not remembered
Summary: Sorting order is not remembered
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-Sort (other bugs)
Version First Reported In: 1.5.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-13 16:27 UTC by Simon
Modified: 2017-08-18 11:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon 2010-09-13 16:27:19 UTC
Version:           1.5.0 (using KDE 4.5.1) 
OS:                Linux

When I switch the sorting order in the albums view to descending, it will be ascending again on next start.

Reproducible: Always




OS: Linux (x86_64) release 2.6.34-0.slh.11-sidux-amd64
Compiler: cc
Comment 1 Andi Clemens 2010-09-23 23:08:32 UTC
SVN commit 1178783 by aclemens:

Save image sorting settings

BUG:251118

 M  +2 -1      NEWS  
 M  +4 -0      digikam/digikamview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1178783