Save image sorting settings

BUG:251118

svn path=/trunk/extragear/graphics/digikam/; revision=1178783